src/components/Table.css
table {
  border-collapse: collapse;
  width: max-content;
  user-select: none;
}
tr {
  border-color: #ddd;
  /* box-sizing: border-box; */
}

th {
  width: 100px;
  border-color: #ddd;
}

td {
  width: 100px;
  box-sizing: border-box;
  border-color: #ddd;
}
input {
  width: 100%;
  height: 100%;
  background-color: transparent;
  border: none;
  outline: none;
}

textarea {
  background-color: transparent;
  border: none;
  outline: none;
  resize: none;
  overflow: auto;
  padding: 0px;
  font-family: Roboto, Helvetica, Arial, sans-serif;
}

.resizeColumn {
  top: 0;
  right: 0;
  bottom: 0;
  width: 2px;
  position: absolute;
  cursor: col-resize;
}

.resizeColumn:hover {
  background-color: #4b89ff;
}

.resizeRow {
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  position: absolute;
  cursor: row-resize;
}

.resizeRow:hover {
  background-color: #4b89ff;
}

.rowSelected {
  border: 2px solid #4b89ff;
}

.cellSelected {
  border: 2px solid #4b89ff;
  background-color: #e6efff;
}
.dot {
  user-select: none;
  border: 1px solid white;
  position: absolute;
  background-color: #4b89ff;
  height: 6px;
  width: 6px;
  z-index: 9;
  cursor: crosshair;
}
.selectFirstTH {
  border: 2px solid #4b89ff;
  border-bottom: none;
}

.columnSelected {
  border-right: 2px solid #4b89ff;
  border-left: 2px solid #4b89ff;
}
.columnSelectedLast {
  border: 2px solid #4b89ff;
  border-top: none;
}

.selected {
  background-color: #e6efff;
}

.selectedForChangingData {
  background-color: #e6efff;
}

.disabledInput {
  width: 30px;
}

.boundaryColor {
  background-color: #f0f0f0;
  background-clip: content-box;
  overflow: hidden;
}

.selectedBoundaryColor {
  background-color: #dcdcdc;
}

.centered {
  text-align: center;
}

